# kisan_mitra

./: .gitignore  README.md  SETUP.md
backend/: .dockerignore  Dockerfile  process_govt_schemes.py  process_pdfs.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  db.py  logging_utils.py  main.py  models.py  schemas.py  seeds.py
backend/app/agents/: agricultural_planning_agent.py
backend/app/chat/: __init__.py  agent.py  govt_schemes_tool.py  live_agent.py  live_client_example.py  live_router.py  mock_live_agent.py  router.py  schemas.py  tavily_tool.py  weather_tool.py  websocket.py
backend/app/config/: data_sources.py
backend/app/feed/: __init__.py  builder.py  context.py  generators.py  types.py
backend/app/live/: __init__.py  agent.py  ws.py
backend/app/market_analysis/: __init__.py  aggregator.py  agmarknet_client.py  catalog.py  crop_mapping.py  geocoding.py  karnataka_client.py  llm_reports.py  mandi_source.py  nearest_markets.py  schemas.py
backend/app/rag/: __init__.py  chunker.py  config.py  document_processor.py  embedding_service.py  govt_schemes_chunker.py  govt_schemes_processor.py  govt_schemes_retrieval.py  govt_schemes_vector_store.py  models.py  pdf_extractor.py  rag_service.py  retrieval_strategy.py  router.py  vector_store.py
backend/app/routers/: agricultural_agent.py  crop_cycle.py  market_prices.py
backend/data/: app.db
backend/scripts/: README.md  data_sources_config.yaml  fetch_agricultural_data.py  requirements.txt  test_fetcher.py  test_ssl_fix.py
backend/tests/: test_live_ws.py
(+103 files in other folders)
